--- a/src/components/Products/AllProducts.module.css
+++ b/src/components/Products/AllProducts.module.css
@@ -24,6 +24,9 @@
   width: 18rem;
   height: 15rem;
 }
+.productImg:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px;
+}
 
 .productBtnsContainer {
   margin-bottom: 3%;
